--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "antd": "^4.16.13",
+    "bootstrap": "^5.1.3",
     "next": "11.1.2",
     "node-sass": "^4.14.1",
     "react": "17.0.2",
+    "react-bootstrap": "^1.6.4",
+    "react-bootstrap-icons": "^1.5.0",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
